...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blue_background" />

        <EditText
            android:id="@+id/event_name_edit_text"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:autofillHints="AUTOFILL_TYPE_TEXT"
            android:background="@drawable/button_outline_grey"
            android:hint="@string/enter_event_name_hint"
            android:inputType="textMultiLine"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name_edit_text" />

        <EditText
            android:id="@+id/event_location_edit_text"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:autofillHints="AUTOFILL_TYPE_TEXT"
            android:background="@drawable/button_outline_grey"
            android:hint="@string/enter_event_location_hint"
            android:inputType="textMultiLine"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_location_edit_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_event_date_button"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:background="@drawable/button_outline_grey"
            android:hint="@string/enter_event_date_hint"
            android:inputType="date"
            android:padding="10dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_event_date_text" />

        <EditText
            android:id="@+id/event_description_edit_text"
            android:layout_width="359dp"
            android:layout_height="77dp"
            android:background="@drawable/button_outline_grey"
            android:hint="@string/enter_event_description_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
...
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendee_limit_button"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/create_event_confirm_button"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/create_my_event_text"
            android:textSize="20sp"
...
            android:layout_marginTop="8dp"
            android:text="@string/event_description_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_event_time_button" />

        <TextView
            android:id="@+id/create_event_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
...
