<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top_border"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_arrow_icon">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/event_details_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_outline_grey"
        android:drawableEnd="@drawable/forward_arrow_icon"
        android:fontFamily="@font/poppins"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:text="@string/event_details_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_border"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/attendees_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_outline_grey"
        android:drawableEnd="@drawable/forward_arrow_icon"
        android:fontFamily="@font/poppins"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:text="@string/attendees_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_details_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/QR_code_info_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_outline_grey"
        android:drawableEnd="@drawable/forward_arrow_icon"
        android:fontFamily="@font/poppins"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:text="@string/qr_code_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attendees_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/announcements_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_outline_grey"
        android:drawableEnd="@drawable/forward_arrow_icon"
        android:fontFamily="@font/poppins"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:text="@string/announcements_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/QR_code_info_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/location_tracking_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_outline_grey"
        android:drawableEnd="@drawable/forward_arrow_icon"
        android:fontFamily="@font/poppins"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:text="@string/location_tracking_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/announcements_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/milestones_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_outline_grey"
        android:drawableEnd="@drawable/forward_arrow_icon"
        android:fontFamily="@font/poppins"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:text="@string/milestones_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_tracking_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signups_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_outline_grey"
        android:drawableEnd="@drawable/forward_arrow_icon"
        android:fontFamily="@font/poppins"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:text="@string/signups"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/milestones_button" />

</androidx.constraintlayout.widget.ConstraintLayout>