<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventAttendeesActivity">

    <RelativeLayout
        android:id="@+id/event_attendees_list_blue_background"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/event_attendees_list_back_arrow"
            android:layout_width="45dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="23dp"
            android:layout_toStartOf="@+id/attendee_search"
            android:background="@drawable/back_arrow_icon"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/app_name"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/attendee_search"
            android:layout_width="347dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/grey_outline_white_background"
            android:textColor="#535353"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_with_attendee_name_text"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/event_attendees_list_total_attendee_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_attendees_text"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_attendees_list_blue_background" />

    <ListView
        android:id="@+id/event_attendees_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:outlineProvider="background"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_attendees_list_total_attendee_count"
        app:layout_constraintVertical_bias="0.25" />
</androidx.constraintlayout.widget.ConstraintLayout>