<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyEventsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/my_events_list"
            android:layout_width="match_parent"
            android:layout_height="511dp"
            android:layout_marginTop="12dp"
            android:outlineProvider="background"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/loading_my_events_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="Loading. . ."
            android:layout_gravity="center"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</FrameLayout>